added files for separate pages

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front-end index homepage</title>
+    <title>Front End Index Homepage</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 </head>
 <body>
     <header>
-        <h1>Front-end Index</h1>
+        <h1>Front-End Index</h1>
     </header>
 
     <div class="container">
@@ -27,7 +27,7 @@
 
         </section>
         <section id="homepage">
-            <h2>Start</h2>
+            <h2>Links</h2>
             <ul>
                 <li><a href="./html.html">HTML</a></li>
                 <li><a href="/css.html">CSS</a></li>
