--- a/index.html
+++ b/index.html
@@ -27,12 +27,24 @@
 
         </section>
         <section id="homepage">
-            <h2>Links</h2>
+            <h2>Topics</h2>
             <ul>
-                <li><a href="./html.html">HTML</a></li>
-                <li><a href="/css.html">CSS</a></li>
-                <li><a href="javascript.html">Javascript</a></li>
-                <li><a href="git.html">Git</a></li>            
+                <li id="html"><h2>HTML</h2></a>
+                    The underlying structure of a webpage
+                    <img src="./assets/images/html_ex.png" alt="Example of HTML code">
+                    <br>
+                    (this is for this webpage!)
+                </li>
+                <li id="css"><h2>CSS</h2></a>
+                    The styling and formatting of a webpage
+                    <img src="./assets/images/css_ex.png" alt="Example of CSS code">
+                </li>
+                <li id="js"><h2>Javascript</h2></a>
+                    The logic and business of a webpage
+                </li>
+                <li id="git"><h2>Git</h2></a>
+                    Version control
+                </li>            
             </ul>
         </section>
     </div>
