--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
         <section id="homepage">
             <h2>Topics</h2>
             <ul>
-                <li id="html"><h2>HTML</h2></a>
+                <li id="html"><h2>Learn <a href="./files/html.html"> HTML</h2></a>
                     The underlying structure of a webpage
                     <img src="./assets/images/html_ex.png" alt="Example of HTML code">
                     <br>
                     (this is for this webpage!)
                 </li>
-                <li id="css"><h2>CSS</h2></a>
+                <li id="css"><h2>Learn <a href="./files/css.html"> CSS</h2></a>
                     The styling and formatting of a webpage
                     <img src="./assets/images/css_ex.png" alt="Example of CSS code">
                 </li>
-                <li id="js"><h2>Javascript</h2></a>
+                <li id="js"><h2>Learn <a href="./files/javascript.html"> Javascript</h2></a>
                     The logic and business of a webpage
                 </li>
-                <li id="git"><h2>Git</h2></a>
+                <li id="git"><h2>Learn <a href="./files/git.html"> Git</h2></a>
                     Version control
                 </li>            
             </ul>
