--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>
                 A demonstration of learnt programming practices, focused on front-end development
                 <br>
-                Updated regularly based 
+                Updated on a regular basis 
                 <br>
                 To refer to at future reference
 
@@ -43,7 +43,9 @@
                     The logic and business of a webpage
                 </li>
                 <li id="git"><h2>Learn <a href="./files/git.html"> Git</h2></a>
-                    Version control
+                    Version control using terminal
+                    <br>
+                    <img src="./assets/images/git_ex.png" alt="Example of Git version control">
                 </li>            
             </ul>
         </section>
