added cloning notes

--- a/files/git.html
+++ b/files/git.html
@@ -57,6 +57,10 @@
             <p>Cloning a repository is the first step in being able to use version control when developing.
                 <br>
                 <img src="../assets/images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
+                <br>
+                This can be done in Github/Gitlab or any other Git cloud service.
+                <br>
+                After cloning, an unique ID will be given to clone using the terminal.
             </p>
             
         </section>
