added folders for each individual section

--- a/files/git/git.html
+++ b/files/git/git.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git - Front End Index</title>
-    <link rel="stylesheet" href="./f_style.css">
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+    <link rel="stylesheet" href="./git_style.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
         <table>
             <td>
                 <tr>
-        <a href="../index.html">Homepage</a>
+        <a href="../../index.html">Homepage</a>
         <br>
                 </tr><tr>
         <a href="#">Cloning Repository</a>
@@ -56,11 +56,13 @@
             <h2>Cloning Repository</h2>
             <p>Cloning a repository is the first step in being able to use version control when developing.
                 <br>
-                <img src="../assets/images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
+                <img src="../../assets/images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
                 <br>
                 This can be done in Github/Gitlab or any other Git cloud service.
                 <br>
-                After cloning, an unique ID will be given to clone using the terminal.
+                After copying, an unique ID can be used to clone the whole repository using the terminal.
+                <br>
+                <img src="../../assets/images/term_clone.png" id="term_clone" alt="Cloning ID into terminal">
             </p>
             
         </section>
