--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li id="js"><h2>Learn <a href="./files/javascript.html"> Javascript</h2></a>
                     The logic and business of a webpage
                 </li>
-                <li id="git"><h2>Learn <a href="./files/git.html"> Git</h2></a>
+                <li id="git"><h2>Learn <a href="./files/git/git.html"> Git</h2></a>
                     Version control using terminal
                     <br>
                     <img src="./assets/images/git_ex.png" alt="Example of Git version control">
