finished cloning repository file

--- a/files/git/git.html
+++ b/files/git/git.html
@@ -19,7 +19,7 @@
         <a href="../../index.html">Homepage</a>
         <br>
                 </tr><tr>
-        <a href="#">Cloning Repository</a>
+        <a href="./git.html">Cloning Repository</a>
         <br>
                 </tr><tr>
         <a href="#">Staging Files</a>
@@ -56,13 +56,22 @@
             <h2>Cloning Repository</h2>
             <p>Cloning a repository is the first step in being able to use version control when developing.
                 <br>
+                Head to the destined repository you would like to clone and start working on, and click on "code"
                 <img src="../../assets/images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
+                <img src="../../assets/images/arrow.png" id="arrow" alt="Arrow demonstrating where to click">
+                <br>
+                Click on SSH, then copy the unique ID given
                 <br>
                 This can be done in Github/Gitlab or any other Git cloud service.
                 <br>
                 After copying, an unique ID can be used to clone the whole repository using the terminal.
                 <br>
                 <img src="../../assets/images/term_clone.png" id="term_clone" alt="Cloning ID into terminal">
+                <br>
+                Once successfully cloned, you will find a folder containing all the contents from the repository.
+                <img src="../../assets/images/cloned_repo.png" id="cloned_repo" alt="Showing cloned repository">
+                <br>
+                You can now work on the project, ready to be pushed back to the repository
             </p>
             
         </section>
