added next page button, resized sidenav

--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -19,7 +19,7 @@
         <a href="../../index.html">Homepage</a>
         <br>
                 </tr><tr>
-        <a href="./git.html">Cloning Repository</a>
+        <a href="./git_homepage.html">Cloning Repository</a>
         <br>
                 </tr><tr>
         <a href="#">Staging Files</a>
@@ -46,8 +46,6 @@
                 Git is the version control software, allowing savepoints to be made 
                 <br>
                 Version control is helpful when developing code, especially in a team, to help prevent developers working on outdated code
-                <br>
-                Git can be used in the terminal
             </p>
 
         </section>
@@ -72,8 +70,9 @@
                 <img src="../../assets/images/cloned_repo.png" id="cloned_repo" alt="Showing cloned repository">
                 <br>
                 You can now work on the project, ready to be pushed back to the repository
+                <br>
             </p>
-            
+            <a href="#" id="next">Next Page ></a>
         </section>
     </div>
 
