changed logo and sizing of images

--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git - Front End Index</title>
     <link rel="stylesheet" href="./git_style.css">
-    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/git_logo.png">
 </head>
 <body>
     <header>
@@ -41,7 +41,9 @@
     </aside>
     <div class="container">
         <section id="git">
-            <h2>Git</h2>
+            <h2>
+                <img src="../../assets/images/git_logo.png" id="git_logo" alt="Github Logo">
+                Git</h2>
             <p>
                 Git is the version control software, allowing savepoints to be made 
                 <br>
