finishing touches on git homepage

--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -56,15 +56,18 @@
             <h2>Cloning Repository</h2>
             <p>Cloning a repository is the first step in being able to use version control when developing.
                 <br>
-                Head to the destined repository you would like to clone and start working on, and click on "code"
+                Head to the <strong>destined repository</strong> you would like to clone and start working on, and <strong>click on "code"</strong>
                 <img src="../../assets/images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
                 <img src="../../assets/images/arrow.png" id="arrow" alt="Arrow demonstrating where to click">
                 <br>
-                Click on SSH, then copy the unique ID given
+                Click on <strong>SSH, then copy the unique ID</strong> given
                 <br>
-                This can be done in Github/Gitlab or any other Git cloud service.
+                Open <strong>Terminal</strong>
                 <br>
-                After copying, an unique ID can be used to clone the whole repository using the terminal.
+                Then <strong>choose a destination for your repository</strong>, in this instance it will be cloned to the Desktop
+                <img src="../../assets/images/destination.png" id="destination" alt="Choosing a destination for repo">
+                <br>
+                Type in terminal <strong>"git clone '(paste the unique ID)' "</strong> and press Enter.
                 <br>
                 <img src="../../assets/images/term_clone.png" id="term_clone" alt="Cloning ID into terminal">
                 <br>
