--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git - Front End Index</title>
+    <title>Git Cloning Repo - Front End Index</title>
     <link rel="stylesheet" href="./git_style.css">
     <link rel="icon" type="image/x-icon" href="../../assets/images/git_logo.png">
 </head>
@@ -22,7 +22,7 @@
         <a href="./git_homepage.html">Cloning Repository</a>
         <br>
                 </tr><tr>
-        <a href="#">Staging Files</a>
+        <a href="./git_staging.html">Staging Files</a>
         <br>
                 </tr><tr>
         <a href="#">Commit Files</a>
@@ -77,7 +77,7 @@
                 You can now work on the project, ready to be pushed back to the repository
                 <br>
             </p>
-            <a href="#" id="next">Next Page ></a>
+            <a href="./git_staging.html" id="next">Staging Files -></a>
         </section>
     </div>
 
