add finished staging file

--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -42,10 +42,10 @@
     <div class="container">
         <section id="git">
             <h2>
-                <img src="../../assets/images/git_logo.png" id="git_logo" alt="Github Logo">
+                <img src="../../assets/images/git_images/git_logo.png" id="git_logo" alt="Github Logo">
                 Git</h2>
             <p>
-                Git is the version control software, allowing savepoints to be made 
+                Git is the version control software, allowing savepoints to be made when developing code
                 <br>
                 Version control is helpful when developing code, especially in a team, to help prevent developers working on outdated code
             </p>
@@ -57,22 +57,22 @@
             <p>Cloning a repository is the first step in being able to use version control when developing.
                 <br>
                 Head to the <strong>destined repository</strong> you would like to clone and start working on, and <strong>click on "code"</strong>
-                <img src="../../assets/images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
-                <img src="../../assets/images/arrow.png" id="arrow" alt="Arrow demonstrating where to click">
+                <img src="../../assets/images/git_images/cloning_ssh.png" id="clone_ssh" alt="Example of cloning using SSH keys">
+                <img src="../../assets/images/git_images/arrow.png" id="arrow" alt="Arrow demonstrating where to click">
                 <br>
                 Click on <strong>SSH, then copy the unique ID</strong> given
                 <br>
                 Open <strong>Terminal</strong>
                 <br>
                 Then <strong>choose a destination for your repository</strong>, in this instance it will be cloned to the Desktop
-                <img src="../../assets/images/destination.png" id="destination" alt="Choosing a destination for repo">
+                <img src="../../assets/images/git_images/destination.png" id="destination" alt="Choosing a destination for repo">
                 <br>
                 Type in terminal <strong>"git clone '(paste the unique ID)' "</strong> and press Enter.
                 <br>
-                <img src="../../assets/images/term_clone.png" id="term_clone" alt="Cloning ID into terminal">
+                <img src="../../assets/images/git_images/term_clone.png" id="term_clone" alt="Cloning ID into terminal">
                 <br>
                 Once successfully cloned, you will find a folder containing all the contents from the repository.
-                <img src="../../assets/images/cloned_repo.png" id="cloned_repo" alt="Showing cloned repository">
+                <img src="../../assets/images/git_images/cloned_repo.png" id="cloned_repo" alt="Showing cloned repository">
                 <br>
                 You can now work on the project, ready to be pushed back to the repository
                 <br>
