--- a/files/git/git_staging.html
+++ b/files/git/git_staging.html
@@ -42,10 +42,10 @@
     <div class="container">
         <section id="git">
             <h2>
-                <img src="../../assets/images/git_logo.png" id="git_logo" alt="Github Logo">
+                <img src="../../assets/images/git_images/git_logo.png" id="git_logo" alt="Github Logo">
                 Git</h2>
             <p>
-                Git is the version control software, allowing savepoints to be made 
+                Git is the version control software, allowing savepoints to be made when developing code
                 <br>
                 Version control is helpful when developing code, especially in a team, to help prevent developers working on outdated code
             </p>
@@ -57,8 +57,18 @@
             <p>
                 Staging files is the act of preparing files to be pushed back to the main repository, on Github.
                 <br>
-                <img src="../../assets/images/git_staging_diagram.png" id="stage_diagram" alt="Diagram to demonstrate staging process in Git">
+                <img src="../../assets/images/git_images/git_staging_diagram.png" id="stage_diagram" alt="Diagram to demonstrate staging process in Git">
                 <br>
+                This is a simple process and only takes one command.
+                <br>
+                In <strong>Terminal</strong>, open the correct folder
+                <br>
+                Type <strong> "git add -A" </strong>to prepare all files in the folder to be pushed
+                <img src="../../assets/images/git_images/staging_ex.png" id="stage_ex" alt="Example of working staging process in terminal">
+                <br>
+                If successful, the terminal will <strong>display a new line </strong>with no text
+                <br>
+                The files are now staged, ready to be committed.
 
             </p>
             <a href="./git_homepage.html" id="previous"> <- Staging Files </a>
