--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <ul>
                 <li id="html"><h2>Learn <a href="./files/html.html"> HTML</h2></a>
                     The underlying structure of a webpage
-                    <img src="./assets/images/html_ex.png" alt="Example of HTML code">
+                    <img src="./assets/images/code_examples/html_ex.png" alt="Example of HTML code">
                     <br>
                     (this is for this webpage!)
                 </li>
                 <li id="css"><h2>Learn <a href="./files/css.html"> CSS</h2></a>
                     The styling and formatting of a webpage
-                    <img src="./assets/images/css_ex.png" alt="Example of CSS code">
+                    <img src="./assets/images/code_examples/css_ex.png" alt="Example of CSS code">
                 </li>
                 <li id="js"><h2>Learn <a href="./files/javascript.html"> Javascript</h2></a>
                     The logic and business of a webpage
@@ -45,7 +45,7 @@
                 <li id="git"><h2>Learn <a href="./files/git/git_homepage.html"> Git</h2></a>
                     Version control using terminal
                     <br>
-                    <img src="./assets/images/git_ex.png" alt="Example of Git version control">
+                    <img src="./assets/images/code_examples/git_ex.png" alt="Example of Git version control">
                 </li>            
             </ul>
         </section>
