fixed next/previous page tags, updated favicon

--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Cloning Repo - Front End Index</title>
     <link rel="stylesheet" href="./git_style.css">
-    <link rel="icon" type="image/x-icon" href="../../assets/images/git_logo.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/git_images/git_logo.png">
 </head>
 <body>
     <header>
