--- a/files/git/git_staging.html
+++ b/files/git/git_staging.html
@@ -22,10 +22,10 @@
         <a href="./git_homepage.html">Cloning Repository</a>
         <br>
                 </tr><tr>
-        <a href="#">Staging Files</a>
+        <a href="./git_staging.html">Staging Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Commit Files</a>
+        <a href="./git_commit.html">Commit Files</a>
         <br>
                 </tr><tr>
         <a href="#">Branches</a>
@@ -72,7 +72,7 @@
 
             </p>
             <a href="./git_homepage.html" id="previous"> <- Cloning Repo </a>
-            <a href="#" id="next">Committing Files -></a>
+            <a href="./git_commit.html" id="next">Committing Files -></a>
         </section>
     </div>
 
