added example folder

--- a/files/git/git_commit.html
+++ b/files/git/git_commit.html
@@ -28,13 +28,14 @@
         <a href="./git_commit.html">Commit Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Branches</a>
-        <br>
-                </tr><tr>
-        <a href="#">Push Files</a>
+        <a href="./git_push.html">Push Files</a>
         <br>
                 </tr><tr>
         <a href="#">Pull Files</a>
+        <br>
+                </tr><tr>
+        <a href="#">Branches</a>
+        <br>
                 </tr>
             </td>
         </table>
@@ -60,9 +61,15 @@
                 Essentially taking <strong>all elements from the staged area</strong>, to take a permanent snapshot of the files.
                 <br>
                 Files must be <a href="./git_staging.html" id="staged_in_link">staged</a> before being ready to commit
+                <br>
+                <img src="../../assets/images/git_images/commit_ex.png" id="commit_ex" alt="Example of committing files">
+                <br>
+                To commit a file, type <strong>"git commit -m '(comment on changes made)'"</strong>
+                <br>
+                This will make <strong> no changes to the repository</strong>, however files are now ready to be pushed.
             </p>
             <a href="./git_staging.html" id="previous"> <- Staging Files </a>
-            <a href="#" id="next">Branches -></a>
+            <a href="./git_push.html" id="next">Push Files -></a>
         </section>
     </div>
 
