--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -28,13 +28,14 @@
         <a href="./git_commit.html">Commit Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Branches</a>
-        <br>
-                </tr><tr>
-        <a href="#">Push Files</a>
+        <a href="./git_push.html">Push Files</a>
         <br>
                 </tr><tr>
         <a href="#">Pull Files</a>
+        <br>
+                </tr><tr>
+        <a href="#">Branches</a>
+        <br>
                 </tr>
             </td>
         </table>
@@ -74,7 +75,7 @@
                 Once successfully cloned, you will find a folder containing all the contents from the repository.
                 <img src="../../assets/images/git_images/cloned_repo.png" id="cloned_repo" alt="Showing cloned repository">
                 <br>
-                You can now work on the project, ready to be pushed back to the repository
+                You can now work on the project.
                 <br>
             </p>
             <a href="./git_staging.html" id="next">Staging Files -></a>
