removed example folder

--- a/files/git/git_push.html
+++ b/files/git/git_push.html
@@ -68,8 +68,11 @@
                 <br>
                 The folder has been staged and committed, now ready to be pushed.
                 <br>
-                In the terminal type <strong> "git push origin main"</strong>
-                
+                In the terminal type <strong> "git push"</strong>
+                <br>
+                <img src="../../assets/images/git_images/push_ex.png" id="push_ex" alt="Example of push command in terminal">
+
+
             </p>
             <a href="./git_commit.html" id="previous"> <- Committing Files </a>
             <a href="#" id="next">Push Files -></a>
