added 'push files' page

--- a/files/git/git_push.html
+++ b/files/git/git_push.html
@@ -56,26 +56,36 @@
         <section id="clone">
             <h2>Pushing Files</h2>
             <p>
-                Pushing files, uploads the committed files to the repository.
+                Pushing files, <strong> uploads the edited files </strong> to the repository.
                 <br>
                 Files must first be <a href="./git_commit.html">committed</a>, with an appropriate comment.
                 <br>
-                In this example, I'll push the "example" folder to the repository.
+                In this example, I'll <strong>push a new "example" folder</strong> to the repository.
                 <br>
                 <img src="../../assets/images/git_images/repository.png" id="repository" alt="Repository without example folder">
                 <br>
-                This is the repository without the folder.
+                This is the repository <strong> without the folder</strong>.
+                <br>
+                However, this is how my local directory looks (notice it has an extra "example" folder)
+                <br>
+                <img src="../../assets/images/git_images/local_dir.png" id="local_dir" alt="Local directory with new folder">
                 <br>
                 The folder has been staged and committed, now ready to be pushed.
                 <br>
                 In the terminal type <strong> "git push"</strong>
                 <br>
                 <img src="../../assets/images/git_images/push_ex.png" id="push_ex" alt="Example of push command in terminal">
+                <br>
+                The <strong>contents of the folder </strong> has now been <strong>pushed to the live repository</strong>.
+                <br>
+                <img src="../../assets/images/git_images/pushed_repo.png" id="pushed_repo" alt="Example of repository with pushed contents">
+                <br>
+                The example folder can now be seen in the repository.
 
 
             </p>
             <a href="./git_commit.html" id="previous"> <- Committing Files </a>
-            <a href="#" id="next">Push Files -></a>
+            <a href="#" id="next">Pull Files -></a>
         </section>
     </div>
 
