added 'pull files' page

--- a/files/git/git_commit.html
+++ b/files/git/git_commit.html
@@ -31,10 +31,10 @@
         <a href="./git_push.html">Push Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Pull Files</a>
+        <a href="./git_pull.html">Pull Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Branches</a>
+        <a href="./git_branches.html">Branches</a>
         <br>
                 </tr>
             </td>
@@ -56,9 +56,9 @@
         <section id="clone">
             <h2>Committing Files</h2>
             <p>
-                Committing files takes the staged files a step further, with a <strong>comment from the user</strong>.
+                Committing files takes the staged files a step further, with a <strong>comment from you</strong>.
                 <br>
-                Essentially taking <strong>all elements from the staged area</strong>, to take a permanent snapshot of the files.
+                Essentially taking <strong>all elements from the staged area</strong>, and taking a permanent snapshot of the files.
                 <br>
                 Files must be <a href="./git_staging.html" id="staged_in_link">staged</a> before being ready to commit
                 <br>
