--- a/files/git/git_push.html
+++ b/files/git/git_push.html
@@ -31,10 +31,10 @@
         <a href="./git_push.html">Push Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Pull Files</a>
+        <a href="./git_pull.html">Pull Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Branches</a>
+        <a href="./git_branches.html">Branches</a>
         <br>
                 </tr>
             </td>
@@ -80,12 +80,12 @@
                 <br>
                 <img src="../../assets/images/git_images/pushed_repo.png" id="pushed_repo" alt="Example of repository with pushed contents">
                 <br>
-                The example folder can now be seen in the repository.
+                The <strong> example folder can now be seen </strong> in the repository.
 
 
             </p>
             <a href="./git_commit.html" id="previous"> <- Committing Files </a>
-            <a href="#" id="next">Pull Files -></a>
+            <a href="./git_pull.html" id="next">Pull Files -></a>
         </section>
     </div>
 
