--- a/files/git/git_homepage.html
+++ b/files/git/git_homepage.html
@@ -31,10 +31,10 @@
         <a href="./git_push.html">Push Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Pull Files</a>
+        <a href="./git_pull.html">Pull Files</a>
         <br>
                 </tr><tr>
-        <a href="#">Branches</a>
+        <a href="./git_branches.html">Branches</a>
         <br>
                 </tr>
             </td>
