--- a/files/git/git_pull.html
+++ b/files/git/git_pull.html
@@ -59,6 +59,12 @@
                 Pulling files, is the opposite of <a href="./git_push.html">pushing</a> files.
                 <br>
                 When a <strong> repository is updated</strong>, and the <strong>local directory is outdated</strong>, we can pull files to keep our directory updated.
+                <br>
+                For example, in this photo <strong>the repository</strong> has the "example" folder, but <strong> my local directory doesn't</strong>.
+                <br>
+                <img src="../../assets/images/git_images/pull_repository.png" id="local_out" alt="Example of local directory which is outdated from repository">
+                <br>
+                This means my directory is <strong>outdated</strong>
             
             </p>
             <a href="./git_push.html" id="previous"> <- Pushing Files </a>
