--- a/files/git/git_pull.html
+++ b/files/git/git_pull.html
@@ -56,7 +56,7 @@
         <section id="clone">
             <h2>Pulling Files</h2>
             <p>
-                Pulling files, is the opposite of <a href="./git_push.html">pushing</a> files.
+                Pulling files, is the opposite of <a href="./git_push.html" id="pushing">pushing</a> files.
                 <br>
                 When a <strong> repository is updated</strong>, and the <strong>local directory is outdated</strong>, we can pull files to keep our directory updated.
                 <br>
