--- a/files/git/git_push.html
+++ b/files/git/git_push.html
@@ -58,7 +58,7 @@
             <p>
                 Pushing files, <strong> uploads the edited files </strong> to the repository.
                 <br>
-                Files must first be <a href="./git_commit.html">committed</a>, with an appropriate comment.
+                Files must first be <a href="./git_commit.html" id="committed">committed</a>, with an appropriate comment.
                 <br>
                 In this example, I'll <strong>push a new "example" folder</strong> to the repository.
                 <br>
